--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ninjachat</title>
-    <!-- Google Tag Manager -->
-    <!-- <script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ninjachat</title>
+  <!-- Google Tag Manager -->
+  <!-- <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -18,13 +19,13 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-MSD6K4P");
     </script> -->
-    <!-- End Google Tag Manager -->
-    <!-- <div id="app"></div> -->
-  </head>
+  <!-- End Google Tag Manager -->
+  <!-- <div id="app"></div> -->
+</head>
 
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <!-- <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-MSD6K4P"
         height="0"
@@ -32,9 +33,9 @@
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript> -->
-    <!-- End Google Tag Manager (noscript) -->
+  <!-- End Google Tag Manager (noscript) -->
 
-    <!-- <script>
+  <!-- <script>
     setTimeout(function () {
       (function (b, o, t, u, p, c) {
         d = o.createElement("div");
@@ -58,7 +59,7 @@
     }, 2000);
   </script> -->
 
-    <!-- <script>
+  <!-- <script>
       setTimeout(function () {
         (function (b, o, t, u, p, c) {
           d = o.createElement("div");
@@ -82,203 +83,203 @@
       }, 2000);
     </script> -->
 
-    <div class="clock">
-      <div class="outer-clock-face">
-        <div class="marking marking-one"></div>
-        <div class="marking marking-two"></div>
-        <div class="marking marking-three"></div>
-        <div class="marking marking-four"></div>
-      </div>
-
-      <div class="inner-clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+  <div class="clock">
+    <div class="outer-clock-face">
+      <div class="marking marking-one"></div>
+      <div class="marking marking-two"></div>
+      <div class="marking marking-three"></div>
+      <div class="marking marking-four"></div>
     </div>
-    <script>
-      var _glc = _glc || [];
-      _glc.push("ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDIzIr2pAsM");
-      var glcpath =
-        "https:" == document.location.protocol
-          ? "https://my.clickdesk.com/clickdesk-ui/browser/"
-          : "http://my.clickdesk.com/clickdesk-ui/browser/";
-      var glcp =
-        "https:" == document.location.protocol ? "https://" : "http://";
-      var glcspt = document.createElement("script");
-      glcspt.type = "text/javascript";
-      glcspt.async = true;
-      glcspt.src = glcpath + "livechat-cloud-new.js";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(glcspt, s);
-      const secondHand = document.querySelector(".second-hand");
-      const minsHand = document.querySelector(".min-hand");
-      const hourHand = document.querySelector(".hour-hand");
 
-      function setDate() {
-        const now = new Date();
+    <div class="inner-clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
+    </div>
+  </div>
+  <script>
 
-        const seconds = now.getSeconds();
-        const secondsDegrees = (seconds / 60) * 360 + 90;
-        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+    const secondHand = document.querySelector(".second-hand");
+    const minsHand = document.querySelector(".min-hand");
+    const hourHand = document.querySelector(".hour-hand");
 
-        const mins = now.getMinutes();
-        const minsDegrees = (mins / 60) * 360 + (seconds / 60) * 6 + 90;
-        minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+    function setDate() {
+      const now = new Date();
 
-        const hour = now.getHours();
-        const hourDegrees = (hour / 12) * 360 + (mins / 60) * 30 + 90;
-        hourHand.style.transform = `rotate(${hourDegrees}deg)`;
-      }
+      const seconds = now.getSeconds();
+      const secondsDegrees = (seconds / 60) * 360 + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
-      setInterval(setDate, 1000);
+      const mins = now.getMinutes();
+      const minsDegrees = (mins / 60) * 360 + (seconds / 60) * 6 + 90;
+      minsHand.style.transform = `rotate(${minsDegrees}deg)`;
 
-      setDate();
-    </script>
-    
-    <style>
-      html {
-        background: #d8dcd6;
-        text-align: center;
-        font-size: 10px;
-      }
+      const hour = now.getHours();
+      const hourDegrees = (hour / 12) * 360 + (mins / 60) * 30 + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    }
 
-      body {
-        margin: 0;
-        font-size: 2rem;
-        display: flex;
-        flex: 1;
-        min-height: 100vh;
-        align-items: center;
-      }
+    setInterval(setDate, 1000);
 
-      .clock {
-        width: 30rem;
-        height: 30rem;
-        position: relative;
-        padding: 2rem;
-        border: 18px solid #d3d7d0;
-        box-shadow: 5px -5px 5px 0px rgba(242, 243, 242, 0.5),
-          -5px 8px 8px 0px rgba(177, 185, 173, 0.5),
-          inset -3.5px 5.5px 6px 0px rgba(177, 185, 173, 0.5),
-          inset 3px -3px 1px 0px rgba(190, 197, 186, 0.15);
-        border-radius: 50%;
-        margin: 50px auto;
-      }
+    setDate();
+  </script>
 
-      .outer-clock-face {
-        position: relative;
-        background: #d8dcd6;
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-        border-radius: 100%;
-      }
+  <style>
+    html {
+      background: #d8dcd6;
+      text-align: center;
+      font-size: 10px;
+    }
 
-      .outer-clock-face::after {
-        -webkit-transform: rotate(90deg);
-        -moz-transform: rotate(90deg);
-        transform: rotate(90deg);
-      }
+    body {
+      margin: 0;
+      font-size: 2rem;
+      display: flex;
+      flex: 1;
+      min-height: 100vh;
+      align-items: center;
+    }
 
-      .outer-clock-face::after,
-      .outer-clock-face::before,
-      .outer-clock-face .marking {
-        content: "";
-        position: absolute;
-        width: 5px;
-        height: 100%;
-        background: #84c2b3;
-        z-index: 0;
-        left: 49%;
-      }
+    .clock {
+      width: 30rem;
+      height: 30rem;
+      position: relative;
+      padding: 2rem;
+      border: 18px solid #d3d7d0;
+      box-shadow: 5px -5px 5px 0px rgba(242, 243, 242, 0.5),
+        -5px 8px 8px 0px rgba(177, 185, 173, 0.5),
+        inset -3.5px 5.5px 6px 0px rgba(177, 185, 173, 0.5),
+        inset 3px -3px 1px 0px rgba(190, 197, 186, 0.15);
+      border-radius: 50%;
+      margin: 50px auto;
+    }
 
-      .outer-clock-face .marking {
-        background: #9bc5bb;
-        width: 3px;
-      }
+    .outer-clock-face {
+      position: relative;
+      background: #d8dcd6;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      border-radius: 100%;
+    }
 
-      .outer-clock-face .marking.marking-one {
-        -webkit-transform: rotate(30deg);
-        -moz-transform: rotate(30deg);
-        transform: rotate(30deg);
-      }
+    .outer-clock-face::after {
+      -webkit-transform: rotate(90deg);
+      -moz-transform: rotate(90deg);
+      transform: rotate(90deg);
+    }
 
-      .outer-clock-face .marking.marking-two {
-        -webkit-transform: rotate(60deg);
-        -moz-transform: rotate(60deg);
-        transform: rotate(60deg);
-      }
+    .outer-clock-face::after,
+    .outer-clock-face::before,
+    .outer-clock-face .marking {
+      content: "";
+      position: absolute;
+      width: 5px;
+      height: 100%;
+      background: #84c2b3;
+      z-index: 0;
+      left: 49%;
+    }
 
-      .outer-clock-face .marking.marking-three {
-        -webkit-transform: rotate(120deg);
-        -moz-transform: rotate(120deg);
-        transform: rotate(120deg);
-      }
+    .outer-clock-face .marking {
+      background: #9bc5bb;
+      width: 3px;
+    }
 
-      .outer-clock-face .marking.marking-four {
-        -webkit-transform: rotate(150deg);
-        -moz-transform: rotate(150deg);
-        transform: rotate(150deg);
-      }
+    .outer-clock-face .marking.marking-one {
+      -webkit-transform: rotate(30deg);
+      -moz-transform: rotate(30deg);
+      transform: rotate(30deg);
+    }
 
-      .inner-clock-face {
-        position: absolute;
-        top: 10%;
-        left: 10%;
-        width: 80%;
-        height: 80%;
-        background: #d8dcd6;
-        -webkit-border-radius: 100%;
-        -moz-border-radius: 100%;
-        border-radius: 100%;
-        z-index: 1;
-      }
+    .outer-clock-face .marking.marking-two {
+      -webkit-transform: rotate(60deg);
+      -moz-transform: rotate(60deg);
+      transform: rotate(60deg);
+    }
 
-      .inner-clock-face::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 16px;
-        height: 16px;
-        border-radius: 18px;
-        margin-left: -9px;
-        margin-top: -6px;
-        background: #e38c63;
-        z-index: 11;
-      }
+    .outer-clock-face .marking.marking-three {
+      -webkit-transform: rotate(120deg);
+      -moz-transform: rotate(120deg);
+      transform: rotate(120deg);
+    }
 
-      .hand {
-        width: 50%;
-        right: 50%;
-        height: 6px;
-        background: #e38c63;
-        position: absolute;
-        top: 50%;
-        border-radius: 6px;
-        transform-origin: 100%;
-        transform: rotate(90deg);
-        transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-      }
+    .outer-clock-face .marking.marking-four {
+      -webkit-transform: rotate(150deg);
+      -moz-transform: rotate(150deg);
+      transform: rotate(150deg);
+    }
 
-      .hand.hour-hand {
-        width: 30%;
-        z-index: 3;
-      }
+    .inner-clock-face {
+      position: absolute;
+      top: 10%;
+      left: 10%;
+      width: 80%;
+      height: 80%;
+      background: #d8dcd6;
+      -webkit-border-radius: 100%;
+      -moz-border-radius: 100%;
+      border-radius: 100%;
+      z-index: 1;
+    }
 
-      .hand.min-hand {
-        height: 3px;
-        z-index: 10;
-        width: 45%;
-      }
+    .inner-clock-face::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 16px;
+      height: 16px;
+      border-radius: 18px;
+      margin-left: -9px;
+      margin-top: -6px;
+      background: #e38c63;
+      z-index: 11;
+    }
 
-      .hand.second-hand {
-        background: #767b78;
-        width: 45%;
-        height: 2px;
-        z-index: 1;
-      }
-    </style>
-  </body>
+    .hand {
+      width: 50%;
+      right: 50%;
+      height: 6px;
+      background: #e38c63;
+      position: absolute;
+      top: 50%;
+      border-radius: 6px;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    }
+
+    .hand.hour-hand {
+      width: 30%;
+      z-index: 3;
+    }
+
+    .hand.min-hand {
+      height: 3px;
+      z-index: 10;
+      width: 45%;
+    }
+
+    .hand.second-hand {
+      background: #767b78;
+      width: 45%;
+      height: 2px;
+      z-index: 1;
+    }
+  </style>
+
+  <!-- ClickDesk Live Chat Service for websites -->
+  <script type='text/javascript'>
+    var _glc = _glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDIzIr2pAsM');
+    var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' :
+      'http://my.clickdesk.com/clickdesk-ui/browser/');
+    var glcp = (('https:' == document.location.protocol) ? 'https://' : 'http://');
+    var glcspt = document.createElement('script'); glcspt.type = 'text/javascript';
+    glcspt.async = true; glcspt.src = glcpath + 'livechat-cloud-new.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(glcspt, s);
+  </script>
+  <!-- End of ClickDesk -->
+</body>
+
 </html>
