--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       );
     }, 2000);
   </script> -->
-    <script>
+    <!-- <script>
       setTimeout(function () {
         (function (n, j, c, h, a, t) {
           d = j.createElement("div");
@@ -74,7 +74,25 @@
           t.appendChild(a);
         })(window, document, "https://widgets.500apps.com/ninjachat/", "ninjachat.js");
       }, 2000);
+    </script> -->
+    <!-- ClickDesk Live Chat Service for websites -->
+    <script type="text/javascript">
+      var _glc = _glc || [];
+      _glc.push("ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM");
+      var glcpath =
+        "https:" == document.location.protocol
+          ? "https://my.clickdesk.com/clickdesk-ui/browser/"
+          : "http://my.clickdesk.com/clickdesk-ui/browser/";
+      var glcp =
+        "https:" == document.location.protocol ? "https://" : "http://";
+      var glcspt = document.createElement("script");
+      glcspt.type = "text/javascript";
+      glcspt.async = true;
+      glcspt.src = glcpath + "livechat-cloud-new.js";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(glcspt, s);
     </script>
+    <!-- End of ClickDesk -->
 
     <div class="clock">
       <div class="outer-clock-face">
