--- a/index.html
+++ b/index.html
@@ -58,23 +58,45 @@
     }, 2000);
   </script> -->
     <script>
+      // setTimeout(function () {
+      //   (function (n, j, c, h, a, t) {
+      //     d = j.createElement("div");
+      //     d.id = "chatbot";
+      //     t = j.getElementsByTagName("head")[0];
+      //     a = j.createElement("script");
+      //     a.async = 1;
+      //     a.id = "ninjachat";
+      //     a.src = c + h;
+      //     a.onload = function () {
+      //       n._NC.init("7778255557650371", "412", "dev");
+      //     };
+      //     j.lastChild.append(d);
+      //     t.appendChild(a);
+      //   })(window, document, "https://nagendra-500.github.io/", "ninjachat.js");
+      // }, 2000);
       setTimeout(function () {
-        (function (n, j, c, h, a, t) {
-          d = j.createElement("div");
-          d.id = "chatbot";
-          t = j.getElementsByTagName("head")[0];
-          a = j.createElement("script");
-          a.async = 1;
-          a.id = "ninjachat";
-          a.src = c + h;
-          a.onload = function () {
-            n._NC.init("7778255557650371", "412", "dev");
+        (function (b, o, t, u, p, c) {
+          d = o.createElement("div");
+          d.id = "app";
+          c = o.getElementsByTagName("head")[0];
+          p = o.createElement("script");
+          p.async = 1;
+          p.id = "botup";
+          p.src = t + u;
+          p.onload = function () {
+            b._Botup.init("3958197226454698", "1837", "ap1");
           };
-          j.lastChild.append(d);
-          t.appendChild(a);
-        })(window, document, "https://nagendra-500.github.io/", "ninjachat.js");
+          o.lastChild.append(d);
+          c.appendChild(p);
+        })(
+          window,
+          document,
+          "https://widgets.500apps.com/botup/",
+          "botupchat.js"
+        );
       }, 2000);
     </script>
+
     <!-- ClickDesk Live Chat Service for websites -->
     <!-- <script type="text/javascript">
       var _glc = _glc || [];
