--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
       );
     }, 2000);
   </script> -->
-    <script>
-      // setTimeout(function () {
+      <!-- // setTimeout(function () {
       //   (function (n, j, c, h, a, t) {
       //     d = j.createElement("div");
       //     d.id = "chatbot";
@@ -96,47 +95,29 @@
       //   );
       // }, 2000);
 
-      setTimeout(function () {
-        (function (n, j, c, h, a, t) {
-          d = j.createElement("div");
-          d.id = "chatbot";
-          t = j.getElementsByTagName("head")[0];
-          a = j.createElement("script");
-          a.async = 1;
-          a.id = "ninjachat";
-          a.src = c + h;
-          a.onload = function () {
-            n._NC.init("207153581930892", "470", "dev");
-          };
-          j.lastChild.append(d);
-          t.appendChild(a);
-        })(
-          window,
-          document,
-          "https://widgets.500apps.com/dev/ninjachat/",
-          "ninjachat.js"
-        );
-      }, 2000);
-    </script>
+      // setTimeout(function () {
+      //   (function (n, j, c, h, a, t) {
+      //     d = j.createElement("div");
+      //     d.id = "chatbot";
+      //     t = j.getElementsByTagName("head")[0];
+      //     a = j.createElement("script");
+      //     a.async = 1;
+      //     a.id = "ninjachat";
+      //     a.src = c + h;
+      //     a.onload = function () {
+      //       n._NC.init("207153581930892", "470", "dev");
+      //     };
+      //     j.lastChild.append(d);
+      //     t.appendChild(a);
+      //   })(
+      //     window,
+      //     document,
+      //     "https://widgets.500apps.com/dev/ninjachat/",
+      //     "ninjachat.js"
+      //   );
+      // }, 2000); -->
 
-    <!-- ClickDesk Live Chat Service for websites -->
-    <!-- <script type="text/javascript">
-      var _glc = _glc || [];
-      _glc.push("ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM");
-      var glcpath =
-        "https:" == document.location.protocol
-          ? "https://my.clickdesk.com/clickdesk-ui/browser/"
-          : "http://my.clickdesk.com/clickdesk-ui/browser/";
-      var glcp =
-        "https:" == document.location.protocol ? "https://" : "http://";
-      var glcspt = document.createElement("script");
-      glcspt.type = "text/javascript";
-      glcspt.async = true;
-      glcspt.src = glcpath + "livechat-cloud-new.js";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(glcspt, s);
-    </script> -->
-    <!-- End of ClickDesk -->
+ 
 
     <div class="clock">
       <div class="outer-clock-face">
@@ -322,5 +303,19 @@
         z-index: 1;
       }
     </style>
+<!-- ClickDesk Live Chat Service for websites -->
+<script type='text/javascript'>
+  var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM');
+  var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' : 
+  'http://my.clickdesk.com/clickdesk-ui/browser/');
+  var glcp = (('https:' == document.location.protocol) ? 'https://' : 'http://');
+  var glcspt = document.createElement('script'); glcspt.type = 'text/javascript'; 
+  glcspt.async = true; glcspt.src = glcpath + 'livechat-cloud-new.js';
+  var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(glcspt, s);
+  </script>
+  <!-- End of ClickDesk -->
+
+
+
   </body>
 </html>
